# mosoro-core

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  robots.yaml.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: Dockerfile.agent  config.yaml.example  requirements.txt
agents/adapters/: base_adapter.py  fetch_adapter.py  geekplus_adapter.py  locus_adapter.py  mir_adapter.py  stretch_adapter.py
agents/config/: example.yaml  fetch.yaml  geekplus.yaml  locus.yaml  mir.yaml  stretch.yaml
agents/core/: agent.py  config.py
api/: Dockerfile.api  main.py  models.py  mqtt_subscriber.py
docker/: docker-compose.prod.yml
docker/mosquitto/: aclfile  aclfile.demo  mosquitto.conf
docs/: app-guide.md  user-guide.md
frontend/: Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: login.tsx
frontend/src/components/command-palette/: command-palette.tsx
frontend/src/components/events/: events-feed.tsx
frontend/src/context/: auth-context.tsx  notifications-context.tsx  theme-context.tsx
frontend/src/data/: catalog.json
frontend/src/hooks/: use-auth.ts  use-extensions-catalog.ts  use-websocket.ts
frontend/src/pages/: dashboard-page.tsx  events-page.tsx  extensions-page.tsx  login-page.tsx  map-page.tsx  robot-detail-page.tsx  robots-page.tsx  tasks-page.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: extension.ts  robot.ts
gateway/: Dockerfile.gateway  gateway.py  rules.yaml.example  state.py
mosoro_core/: __init__.py  adapter_registry.py  base_adapter.py  models.py  plugin_types.py  plugins.py  version.py
scripts/: setup-wizard.sh
security/: auth.py  mqtt_tls.py
security/scripts/: generate_certs.py  generate_passwordfile.sh
simulator/: Dockerfile.simulator  __init__.py  virtual_fleet.py
tests/: conftest.py  test_api.py  test_models.py  test_plugins.py
(+14 files in other folders)
